# ldraw.rs

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: development.yml  rust.yml
examples/: Cargo.toml
examples/baker/: Cargo.toml  out
examples/baker/src/: main.rs
examples/instanced_test/: Cargo.toml
examples/instanced_test/src/: main.rs
examples/loader/: Cargo.toml
examples/loader/src/: main.rs
examples/renderer/: Cargo.toml  out  s
examples/renderer/shaders/: default.fs  default.vs  edge.fs  edge.vs
examples/renderer/src/: lib.rs  main.rs
examples/renderer_gfx/: Cargo.toml
examples/renderer_gfx/src/: main.rs
examples/renderer_native/: Cargo.toml
examples/renderer_native/src/: main.rs
examples/renderer_web/: Cargo.toml  index.html  package-lock.json  package.json  shaders  webpack.config.js
examples/renderer_web/src/: lib.rs
ir/: Cargo.toml
ir/src/: document.rs  editor.rs  geometry.rs  lib.rs  model.rs  part.rs
ldraw/: Cargo.toml
ldraw/src/: color.rs  context.rs  document.rs  elements.rs  error.rs  lib.rs  library.rs  library_native.rs  parser.rs  writer.rs
ldraw/src/resolvers/: http.rs  local.rs  mod.rs
olr/: Cargo.toml
olr/src/: context.rs  error.rs  lib.rs  ops.rs  shared.rs  utils.rs
renderer/: Cargo.toml
renderer/shaders/: default.fs  default.vs  default_instanced.fs  default_instanced.vs  edge.fs  edge.vs  edge_instanced.fs  edge_instanced.vs  edge_vertex.wgsl  model_fragment_base.wgsl  model_fragment_no_shading.wgsl  model_vertex.wgsl  optional_edge.fs  optional_edge.vs  optional_edge_fragment.wgsl  optional_edge_vertex.wgsl  selection.wgsl
renderer/src/: buffer.rs  camera.rs  display_list.rs  entity.rs  error.rs  geometry.rs  lib.rs  model.rs  part.rs  pipeline.rs  projection.rs  scene.rs  shader.rs  state.rs  util.rs  utils.rs
renderer_v2/: Cargo.toml
renderer_v2/shaders/: edge_fragment.wgsl  edge_vertex.wgsl  model_fragment_base.wgsl  model_fragment_no_shading.wgsl  model_vertex.wgsl  optional_edge_fragment.wgsl  optional_edge_vertex.wgsl
renderer_v2/src/: camera.rs  display_list.rs  lib.rs  part.rs  pipeline.rs
tools/baker/: Cargo.toml
tools/baker/src/: main.rs
tools/ldr2img/: Cargo.toml
tools/ldr2img/src/: main.rs
tools/viewer/common/: Cargo.toml
tools/viewer/common/src/: error.rs  lib.rs  texture.rs
tools/viewer/ios/: Cargo.toml  viewer_ios.h
tools/viewer/ios/src/: lib.rs
tools/viewer/native/: Cargo.toml
tools/viewer/native/src/: main.rs
tools/viewer/web/: .gitignore  Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
tools/viewer/web/src/: lib.rs
tools/viewer_v2/: Cargo.toml
tools/viewer_v2/src/: app.rs  main.rs
viewer/: Cargo.toml
viewer/common/: Cargo.toml
viewer/common/src/: lib.rs
viewer/native/: Cargo.toml
viewer/native/src/: main.rs
viewer/web/: Cargo.toml  package-lock.json  package.json
viewer/web/src/: lib.rs
