[workspace]
resolver = "2"

members = [
    "ir",
    "ldraw",
    "olr",
    "renderer",
    "tools/baker",
    "tools/ldr2img",
    "tools/viewer/common",
    "tools/viewer/native",
    "tools/viewer/web",
]

[workspace.dependencies]
bincode = "~1.3.3"
cgmath = { version = "~0.18.0", features = ["serde"] }
futures = "~0.3.30"
image = "~0.24.7"
serde = { version = "1.0.80", features = ["derive"] }
tokio = { version = "1.37", features = ["io-util"] }
tokio-stream = { version = "0.1", features = ["io-util"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
wgpu = { version = "22.1" }
