[package]
name = "ldraw"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[dependencies]
async-std.workspace = true
async-trait = "~0.1.52"
cgmath.workspace = true
futures = "~0.3.19"
serde.workspace = true

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "~0.11.20", optional = true, features = ["brotli"] }
encoding_rs = "~0.8.29"
encoding_rs_io = "~0.1.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "~0.11.20" }

[features]
http = ["reqwest"]
