[package]
name = "ldraw"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[dependencies]
async-trait = "~0.1.52"
cgmath.workspace = true
futures.workspace = true
serde.workspace = true
tokio-stream.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "~0.12.4", optional = true, features = ["brotli"] }
tokio = { workspace = true, features = ["fs"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "~0.12.4" }
tokio.workspace = true

[features]
http = ["reqwest"]
