[package]
name = "ldraw-olr"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[dependencies]
cgmath = "~0.18.0"
futures-intrusive = "0.4"
image = "~0.23.14"
ldraw = { path = "../ldraw" }
ldraw-ir = { path = "../ir" }
ldraw-renderer = { path = "../renderer" }
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
wgpu = "0.17.0"
