[package]
name = "ldraw-olr"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[dependencies]
cgmath.workspace = true
futures-intrusive = "0.4"
image.workspace = true
ldraw = { path = "../ldraw" }
ldraw-ir = { path = "../ir" }
ldraw-renderer = { path = "../renderer" }
serde.workspace = true
uuid.workspace = true
wgpu.workspace = true
