[package]
name = "ldraw_renderer"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[dependencies]
cgmath = "~0.18.0"
glow = "~0.11.0"
image = "~0.23.14"
itertools = "~0.10"
ldraw = { path = "../ldraw" }
ldraw_ir = { path = "../ir" }
serde = { version = "1.0", features = ["derive"] }
