[package]
name = "instanced_test"
edition = "2018"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]

[dependencies]
cgmath = "~0.18.0"
glow = "~0.11.0" 
glutin = "~0.21.1"
ldraw = { path = "../../ldraw" }
ldraw_renderer = { path = "../../renderer" }
test_renderer = { path = "../renderer" }
