[package]
name = "test_renderer"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "~0.1.51"
cgmath = "~0.18.0"
glow = "~0.11.0"
ldraw = { path = "../../ldraw" }
ldraw_ir = { path = "../../ir" }
ldraw_renderer = { path = "../../renderer" }
