[package]
name = "renderer_gfx"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2018"

[dependencies]
cgmath = "~0.17.0"
gfx = "~0.18.1"
gfx-backend-gl = { version = "~0.3.0", features = ["glutin"] }
gfx-hal = "~0.3.1"
ldraw = { path = "../../ldraw" }
ldraw_renderer = { path = "../../renderer" }
winit = "~0.20.0-alpha3"

