[package]
name = "renderer_native"
edition = "2018"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]

[dependencies]
cgmath = "~0.17.0"
glow = { git = "https://github.com/segfault87/glow", branch = "use-bleeding-edge" }
glutin = "~0.21.1"
ldraw = { path = "../../ldraw" }
ldraw_renderer = { path = "../../renderer" }
test_renderer = { path = "../renderer" }
