[package]
name = "renderer_web_2"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath = "~0.17.0"
futures-preview = { version = "0.3.0-alpha.18", features = ["async-await", "nightly"] }
glow = { git = "https://github.com/segfault87/glow", branch = "use-bleeding-edge" }
ldraw = { path = "../../ldraw" }
ldraw_renderer = { path = "../../renderer" }
wasm-bindgen = { git = "https://github.com/rustwasm/wasm-bindgen", features = ["serde-serialize"] }
js-sys = { git = "https://github.com/rustwasm/wasm-bindgen" }
wasm-bindgen-futures = { git = "https://github.com/rustwasm/wasm-bindgen" }
serde = { version = "1.0.80", features = ["derive"] }
serde_derive = "^1.0.59"
test_renderer = { path = "../renderer" }

[dependencies.web-sys]
git = "https://github.com/rustwasm/wasm-bindgen"
features = [
         'Document',
         'Element',
         'Headers',
         'HtmlCanvasElement',
         'Node',
         'Request',
         'RequestInit',
         'RequestMode',
         'Response',
         'WebGlRenderingContext',
         'Window'
]
