[package]
name = "baker"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[dependencies]
async-std.workspace = true
bincode.workspace = true
cgmath.workspace = true
clap = "~2.33.0"
futures = "~0.3.19"
itertools = "~0.10.3"
ldraw = { path = "../../ldraw" }
ldraw-ir = { path = "../../ir" }
num_cpus = "~1.13.1"
serde_json = "~1.0"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
