[package]
name = "ldr2img"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = "1"
cgmath = "~0.18.0"
clap = "~2.33.3"
glutin = "~0.27.0"
glow = "~0.11.0"
image = "~0.23.14"
ldraw = { path = "../../ldraw" }
ldraw-ir = { path = "../../ir" }
ldraw-olr = { path = "../../olr" }
ldraw-renderer = { path = "../../renderer" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
