[package]
name = "viewer-common"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2018"

[dependencies]
async-trait = "~0.1.51"
cgmath.workspace = true
instant = { version = "~0.1.12", features = ["wasm-bindgen"] }
ldraw = { path = "../../../ldraw", features = ["http"] }
ldraw-ir = { path = "../../../ir" }
ldraw-renderer = { path = "../../../renderer" }
uuid.workspace = true
wgpu.workspace = true
winit = "0.30"
