[package]
name = "viewer_native"
edition = "2021"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]

[dependencies]
async-std = "1"
cgmath = "~0.18.0"
clap = "~2.33.0"
futures = "~0.3.19"
glow = "~0.11.0"
glutin = "~0.27.0"
ldraw = { path = "../../../ldraw", features = ["http"] }
ldraw_ir = { path = "../../../ir" }
ldraw_renderer = { path = "../../../renderer" }
reqwest = { version = "~0.11.8", features = ["brotli"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
viewer_common = { path = "../common" }
