[package]
name = "viewer_native"
edition = "2021"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]

[dependencies]
async-std.workspace = true
cgmath.workspace = true
clap = "~2.33.0"
futures = "~0.3.19"
ldraw = { path = "../../../ldraw", features = ["http"] }
ldraw-ir = { path = "../../../ir" }
ldraw-renderer = { path = "../../../renderer" }
reqwest = { version = "~0.11.8", features = ["brotli"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
viewer-common = { path = "../common" }
wgpu.workspace = true
winit = "0.28"
