[package]
name = "viewer_web"
version = "0.1.0"
authors = ["Park Joon-Kyu <segfault87@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
cgmath.workspace = true
console_error_panic_hook = "~0.1.7"
futures = { version = "~0.3.30", features = ["async-await"] }
gloo = "~0.4.0"
js-sys = "~0.3.77"
ldraw = { path = "../../../ldraw" }
ldraw-ir = { path = "../../../ir" }
ldraw-renderer = { path = "../../../renderer" }
reqwest = { version = "~0.11.8" }
wasm-bindgen = { version = "~0.2.100", features = ["serde-serialize"] }
wasm-bindgen-futures = "~0.4.43"
serde.workspace = true
serde_derive = "^1.0.59"
tokio.workspace = true
uuid = { workspace = true, features = ["js"] }
viewer-common = { path = "../common" }
wgpu = { workspace = true, features = ["webgl", "webgpu"] }
winit = "0.29"

[dependencies.web-sys]
version = "~0.3.77"
features = [
    'CssStyleDeclaration',
    'Document',
    'Element',
    'Headers',
    'HtmlButtonElement',
    'HtmlCanvasElement',
    'HtmlDivElement',
    'HtmlSelectElement',
    'HtmlTextAreaElement',
    'MouseEvent',
    'Node',
    'Performance',
    'Touch',
    'TouchEvent',
    'TouchList',
    'UiEvent',
    'WebGl2RenderingContext',
    'WheelEvent',
    'Window',
]
